mobile overflow fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -486,5 +486,8 @@ p.link-title{
 
 }
 
+body{
+    overflow: hidden;
+}
 
 }
